Fix emoji z-index issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+    position: relative;
     margin: 0;
     background: var(--gray);
     color: var(--white);
@@ -35,6 +36,110 @@ h2 {
     z-index: 11;
 }
 
+.centerContainer {
+    margin: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    z-index: 120;
+}
+
+.itchIOGameEmbed {
+    background: transparent;
+    border-radius: 12px;
+    border: 2px solid var(--white);
+    overflow: hidden;
+}
+
+.bossTasks {
+    background-image: url('thumbnails/thumbnail-bosstasks.png');
+}
+
+.petSixtyFour {
+    background-image: url('thumbnails/thumbnail-petsixtyfour0.png');
+}
+
+.squink {
+    background-position: 100% 0 !important;
+    background-image: url('thumbnails/squink.png');
+}
+
+.landscapePainting {
+    background-image: url('thumbnails/thumbnail-landscapepainting.png');
+}
+
+.shadowBoxNoHover {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.shadowBox {
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.shadowBox:hover {
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.5);
+}
+
+.projectGrid {
+    z-index: 10;
+    position: relative;
+    display: grid;
+    column-gap: 1rem;
+    row-gap: 1.5rem;
+    width: 100%;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-auto-rows: auto;
+}
+
+.projectGrid>* {
+    z-index: 10;
+    height: 100%;
+    overflow: auto;
+}
+
+.gameWrapper {
+    z-index: 10;
+    position: relative;
+    overflow: visible;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100%;
+    width: calc(100% - 1rem);
+    margin: 0;
+    padding: 0px 4px 0px 4px;
+}
+
+.gameDisplayBox {
+    z-index: 10;
+    position: relative;
+    border-radius: 10px;
+    border: 3px solid var(--white);
+    background-size: cover;
+    background-position: center 0%;
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.wipDisplayBox {
+    position: relative;
+    border-radius: 10px;
+    border: 4px dashed rgb(168, 162, 129);
+    padding: 0px 4px 0px 4px;
+}
+
+.wip {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgb(168, 162, 129);
+    font-size: 1rem;
+    margin-top: 19.5rem;
+    font-weight: bold;
+}
+
 .fallingEmoji {
     position: absolute;
     font-size: 40px;
@@ -42,23 +147,7 @@ h2 {
     user-select: none;
     pointer-events: none;
     will-change: transform;
-}
-
-.projectBox .smallText {
-    opacity: 0%;
-    transition: opacity 0.3s ease;
-}
-
-.projectBox:hover .smallText {
-    opacity: 50%;
-}
-
-.smallText {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1rem;
-    margin: 0;
+    z-index: 1;
 }
 
 .preventSelect {
@@ -71,9 +160,17 @@ h2 {
 }
 
 .contactMe {
+    position: relative;
     margin: 0;
     text-align: center;
     font-size: 2rem;
+}
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    .gameDisplayBox {
+        height: 180px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -88,5 +185,19 @@ h2 {
 
     .fallingEmoji {
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .centerContainer {
+        margin: 0.5rem;
+    }
+
+    .projectGrid {
+        grid-template-columns: 1fr;
+    }
+
+    .gameDisplayBox {
+        height: 160px;
     }
 }
